# python-immutable

./: .gitignore  CHANGELOG.md  README.md  demo.py  pyproject.toml  setup_scm_schemes.py
.github/workflows/: integration_delivery.yml
immutable/: __init__.py  main.py  py.typed
tests/: test_copy.py  test_equality.py  test_is_hashable.py  test_is_immutable.py  test_make_immutable.py
